# seqan

./: .gitignore  .travis.yml  CMakeLists.txt
apps/mason2/: genomic_variants.cpp  genomic_variants.h  mason_variator.cpp  vcf_materialization.cpp  vcf_materialization.h
apps/pair_align/lib/: CMakeLists.txt
apps/samcat/: CMakeLists.txt
core/include/seqan/find/: find_horspool.h
core/include/seqan/parallel/: parallel_macros.h  parallel_queue.h
core/include/seqan/sequence/: container_view.h
core/include/seqan/sequence_journaled/: journal_entries_sorted_array.h
extras/apps/gdf_tools/: CMakeLists.txt  gdf_converter.cpp  gdf_converter_vcf.h  gdf_tools_facade_header.h  gdf_tools_io.h  todo.txt
extras/apps/jst_mapper/: CMakeLists.txt  INFO  configurator.h  extender.h  extender_left.h  extender_right.h  jst_mapper.cpp  jst_mapper.h  jst_mapper_configurator.h  jst_mapper_map_reads.h  jst_mapper_result_writer.h  jst_mapper_verifier.h  matches.h  writer.h
extras/demos/tutorial/data_journaling/: solution_online_search_assignment2.cpp  solution_online_search_assignment3.cpp  solution_online_search_assignment4.cpp  solution_online_search_finder.cpp
extras/include/seqan/: find_journaled_string_tree.h  gdf_io.h  journaled_string_tree.h
extras/include/seqan/find_journaled_string_tree/: INFO  find_extension_hamming.h  find_extension_horspool.h  find_extension_myers_ukkonen.h  find_extension_pigeonhole.h  find_extension_pigeonhole_hits.h  find_extension_pigeonhole_state.h  find_extension_shift_and.h  find_extension_shift_or.h  find_extension_simple.h  find_functor_horspool.h  find_functor_myers_ukkonen.h  find_functor_pigeonhole.h  find_functor_shift_and.h  find_functor_shift_or.h  find_functor_simple.h  find_journaled_string_tree_base.h  find_journaled_string_tree_impl.h  interface.txt
extras/include/seqan/gdf_io/: gdf_io_read.h  gdf_io_write.h
extras/include/seqan/journaled_set/: journaled_set_impl.h
extras/include/seqan/journaled_string_tree/: INFO  delta_coverage_store.h  delta_map.h  delta_map_iterator.h  delta_store.h  gdf_io_read.h  journaled_string_tree_adapter.h  journaled_string_tree_base.h  journaled_string_tree_impl.h  journaled_string_tree_traversal.h  journaled_string_tree_traversal_branch_stack.h  journaled_string_tree_traversal_concept.h  journaled_string_tree_util.h  variant_coverage_store.h  variant_map.h  variant_store.h
extras/tests/find_journaled_string_tree/: CMakeLists.txt  INFO  test_find_journaled_string_tree.cpp  test_find_journaled_string_tree_compare_results.h  test_find_journaled_string_tree_horspool.h  test_find_journaled_string_tree_myers.h  test_find_journaled_string_tree_shift_and.h  test_find_journaled_string_tree_shift_or.h  test_find_journaled_string_tree_simple.h
extras/tests/gdf_io/: CMakeLists.txt  INFO  goldJSeq.gdf  test_gdf_io.cpp  test_gdf_io_read.h  test_gdf_io_write.h
extras/tests/journaled_string_tree/: CMakeLists.txt  goldGDF.gdf  test_delta_map.h  test_journaled_string_tree.cpp  test_journaled_string_tree.h  test_journaled_string_tree_mock_generator.h  test_journaled_string_tree_traverse.h  test_journaled_string_tree_util.h
include/seqan/align/: dp_algorithm_impl.h  dp_align_simd_helper.h  dp_cell.h  dp_formula.h  dp_formula_affine.h  dp_formula_dynamic.h  dp_formula_linear.h  dp_matrix_navigator_score_matrix.h  dp_matrix_navigator_score_matrix_sparse.h  dp_matrix_navigator_trace_matrix.h  dp_scout_simd.h  dp_traceback_impl.h
include/seqan/index/: shape_base.h
include/seqan/seeds/: banded_chain_alignment_impl.h
include/seqan/sequence/: adapt_stl_container.h
manual/source/Tutorial/Algorithms/Alignment/: PairwiseSequenceAlignment.rst
manual/source/Tutorial/DataStructures/Alignment/: AlignmentGaps.rst
sandbox/rmaerker/: CMakeLists.txt
sandbox/rmaerker/apps/: CMakeLists.txt
sandbox/rmaerker/apps/demo_parallel_queue/: CMakeLists.txt  INFO  demo_parallel_queue.cpp
sandbox/rmaerker/apps/gdf_tools/: CMakeLists.txt  INFO  gdf_converter.cpp  gdf_converter_vcf.h  gdf_io_base.h  gdf_io_header.h  gdf_io_read.h  gdf_io_write.h  gdf_tools.cpp  gdf_tools_facade_header.h  gdf_tools_options.h
sandbox/rmaerker/apps/jst_bench/: CMakeLists.txt  jst_bench.cpp  jst_bench_facade_header.h  jst_bench_find.h  jst_bench_io.h
sandbox/rmaerker/apps/test_stringset/: CMakeLists.txt  INFO  test_stringset.cpp
sandbox/rmaerker/demos/: CMakeLists.txt
sandbox/rmaerker/include/seqan/: index_journaled.h
sandbox/rmaerker/include/seqan/index_journaled/: INFO  index_journaled_base.h  index_journaled_fibre.h  index_journaled_fibre_iterator.h  index_journaled_impl.h  partial_sum_simple.h
sandbox/rmaerker/include/seqan/observer_model/: observer_model_base.h
sandbox/rmaerker/tests/: CMakeLists.txt
sandbox/rmaerker/tests/index_journaled/: CMakeLists.txt  test_index_journaled.cpp  test_index_journaled_base.h  test_partial_sum_manager.h
util/cmake/: SeqAnBuildSystem.cmake
